--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "build": "tsc"
   },
+  "type": "module",
   "dependencies": {
-    "@types/node": "^22.10.1"
+    "@types/node": "^22.10.1",
+    "command-line-args": "^6.0.1",
+    "read-ini-file": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@types/command-line-args": "^5.2.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
