--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@types/node": "^22.10.1",
     "command-line-args": "^6.0.1",
-    "read-ini-file": "^4.0.0"
+    "read-ini-file": "^4.0.0",
+    "write-ini-file": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
